--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "./node_modules/.bin/wdio wdio.conf.js",
-    "selenium-server": "./node_modules/.bin/selenium-standalone start"
+    "selenium-server": "./node_modules/.bin/selenium-standalone start",
+    "start-jenkins-server": "java -jar jenkins.war -httpPort=8080 --enable-future-java"
   },
   "keywords": [
     "webdriverio",
@@ -26,6 +27,7 @@
     "@babel/core": "^7.8.7",
     "@babel/preset-env": "^7.8.7",
     "@babel/register": "^7.8.6",
+    "@wdio/allure-reporter": "^5.18.6",
     "@wdio/local-runner": "^5.18.7",
     "@wdio/mocha-framework": "^5.18.7",
     "@wdio/selenium-standalone-service": "^5.16.10",
